tests/snapshots/examples_fixtures/type_system__03_typed_lambdas_and_function_types.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/03_typed_lambdas_and_function_types.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/03_typed_lambdas_and_function_types.flx:13:1
   |
13 | print(map_int_to_string(n, fmt))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/03_typed_lambdas_and_function_types.flx:13:1
   |
13 | print(map_int_to_string(n, fmt))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
